TEMPORARY LOC 4 TESTING-Suswave will replace later

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15028,74 +15028,111 @@ ww1_morocco.26.f: "We should leave before we embarrass ourselves further..."
 
   #Balkan League
   
- balkan_league.1.t:0 "Bulgarian Financial Aid"
- balkan_league.1.d:0 "We've reached an agreement with the Bulgarians, we are to recieve financial aid incase of a war with the Ottomans."
- balkan_league.1.:0 "Sounds Great!"
+balkan_league.2.t: "Mutual Defense Against Austria-Hungary?"
+balkan_league.2.d: "Serbia has approached us with a proposal for mutual defense against Austria-Hungary. Their increasing aggressiveness has forced us to consider new alliances in the region."
+balkan_league.2.a: "Yes, let's guarantee each other’s defense."
+balkan_league.2.b: "No, we can’t commit to that."
 
- balkan_league.2.t:0 "Negotiations with Serbia regarding a possible defense pact against Austria-Hungary?"
- balkan_league.2.d:0 "Russia has urged us to form a defense pact with Serbia fearing Habsburg aggression... As much as we despise the Serbs we could possibly redirect the possible alliance into an Anti-Ottoman Crusade... The possibilities at our fingertips..."
- balkan_league.2.a:0 "Yes, this alliance could be very fruitful..."
- balkan_league.2.b:0 "Yea... no we're good actually"
+balkan_league.18.t: "The Macedonian Question"
+balkan_league.18.d: "The situation in Macedonia is complex. Should we offer the region independence or administer it directly along with Serbia?"
+balkan_league.18.a: "Yes, an independent Macedonia is preferable."
+balkan_league.18.b: "No, it should be jointly administrated by us and Serbia."
 
- balkan_league.3.t:0 "Bulgaria proposes the formation of an autonamous Macedonian State"
- balkan_league.3.d:0 "Bulgaria wishes that an autonomaus Macedonian State should be set up to not only serve both our purposes but to also act as a buffer."
- balkan_league.3.a:0 "Create an "autonomous state" only to have it bow down to Bulgaria? We think not!"
- balkan_league.3.b:0 "Seems fair enough, surely we can outmanuever Foxy Ferdinand and cement the state under our influence"
+balkan_league.4.t: "Serbia Rejects Independent Macedonia"
+balkan_league.4.d: "Serbia has rejected the idea of an independent Macedonia. The discussions must now continue, but will we be able to reach an agreement?"
+balkan_league.4.a: "Let the discussions continue."
+balkan_league.4.b: "Unacceptable!"
 
- balkan_league.4.t:0 "Serbia rejects an autonomaus Macedonian state"
- balkan_league.4.d:0 "Serbia rejects an autonomaus state, instead they rather have direct control over their portion"
- balkan_league.4.a:0 "Oh well, let the discussions continue"
- balkan_league.4.b:0 "Unnaceptable!"
+balkan_league.7.t: "Serbian Proposal for Macedonia"
+balkan_league.7.d: "Serbia has proposed an arrangement for the administration of Macedonia, but they insist that they must control Ohrid."
+balkan_league.7.a: "Ohrid is a prerequisite!"
+balkan_league.7.b: "For the good of the Balkans, I agree."
 
- balkan_league.6.t:0 "How should we carve up Macedonia?"
- balkan_league.6.d:0 "The Macedonian Question needs to be solved once and for all... how should we approach this?"
- balkan_league.6.a:0 "It only seems fair that we get Central Albania, Skijope and Ohrid, right?"
+balkan_league.9.t: "Serbia Wants Reassurance for Defense Pact"
+balkan_league.9.d: "Serbia agrees to let us have Ohrid but seeks reassurance for the defense pact against Habsburg aggression."
+balkan_league.9.a: "Of course, whatever you think is best."
+balkan_league.9.b: "On second thought, no thanks."
 
- balkan_league.7.t:0 "The Serbian Proposal"
- balkan_league.7.d:0 "Serbia proposes the they inherit both Skijope and Ohrid while everything east is fair game for us..."
- balkan_league.7.a:0 "What! Do they think we'll just sit here while they pry us of what is rightfully ours! Ohrid is a bare minimum!"
- balkan_league.7.b:0 "Sure, looks good enough"
+balkan_league.10.t: "Serbia Refuses to Let Us Gain Ohrid"
+balkan_league.10.d: "Serbia has refused to allow us to gain control of Ohrid. We must decide how to respond."
+balkan_league.10.a: "Then they can count us out!"
+balkan_league.10.b: "Fine, they can have Ohrid."
 
- balkan_league.8.t:0 "Bulgaria demands Ohrid as a bare minimum..."
- balkan_league.8.d:0 "Bulgaria demands that they atleast have Ohrid, a territory spanning eastern of Rodopi Mountains and River Strimona, and to touch eastern Albania and Lake Ohrid"
- balkan_league.8.a:0 "Ok, but we need reassurance that Bulgaria will commit to the defense pact against Austria-Hungary"
- balkan_league.8.b:0 "NO, absolutely not!"
+balkan_league.11.t: "Serbia Ceases Negotiations"
+balkan_league.11.d: "Serbia has abruptly ended negotiations over the Macedonian question."
+balkan_league.11.a: "We don't need them anyway!"
 
- balkan_league.9.t:0 "Serbia Agrees To Let Us Have Ohrid, But They Want Reassurance For The Defense Pact Against Habsburg Agression"
- balkan_league.9.d:0 "  "
- balkan_league.9.a:0 "Of Course Pal... Whatever You Think Is Best, I Will See To It. Now We Gonna Slaughter Some Turks?"
- balkan_league.9.b:0 "On second thought, no thankyou"
+balkan_league.22.t: "Romania Seizes Southern Dobruja"
+balkan_league.22.d: "Romanian forces have occupied Southern Dobruja. This loss is a severe blow to our territorial integrity."
+balkan_league.22.a: "Damn."
 
- balkan_league.10.t:0 "Serbia Refuses Us Ownership of Ohrid!"
- balkan_league.10.d:0 "The latest letter from Serbia informs us that they are not willing to allow us Ohrid, they stated Ohrid is non-negotiatble Serbian land!"
- balkan_league.10.a:0 "Hey man! Screw you! Count us out!"
- balkan_league.10.b:0 "Oh yea, we never wanted Ohrid anyway......"
+balkan_league.24.t: "Greece Interested in Balkan League"
+balkan_league.24.d: "Greece has expressed interest in joining the Balkan League, which could strengthen our position against outside threats."
+balkan_league.24.a: "This is great."
 
- balkan_league.11.t:0 "Serbia Ceases Negotiations!"
- balkan_league.11.d:0 "Serbia has made it clear they do not wish to further negotiate the Macedonian Question, they feel their claims aren't being respected..."
- balkan_league.11.a:0 "Ok, we don't need you half-humans anyway!"
+balkan_league.25.t: "Greece Rejects the Balkan League"
+balkan_league.25.d: "Despite our efforts, Greece has refused to join the Balkan League."
+balkan_league.25.a: "Their loss."
 
- balkan_league.12.t:0 "Bulgaria Ceases Negotiations!"
- balkan_league.12.d:0 "Bulgaria has expressed their disatisfaction with the develepment of the Macedonian Question and have called of negotiations and have canceled the defense pact!"
- balkan_league.12.a:0 "We don't need you dirty dogs anyway! We'll rebuild Greater Serbia ourselves!"
+balkan_league.28.t: "Pact Formalized with Montenegro"
+balkan_league.28.d: "A formal pact has been signed with Montenegro, solidifying our alliance in the region."
+balkan_league.28.a: "Great."
 
- balkan_league.18.t:0 "Offer and Independent Macedonia?"
- balkan_league.18.d:0 "An independent Macedonia may be prefferable in stoping further conflicts with Serbia and we could easily influence such a nation..."
- balkan_league.18.a:0 "Yes, an Independent Macedonia is prefferable"
- balkan_league.18.b:0 "No, Macedonia would be better under the Tsar's direct authority"
+balkan_league.29.t: "Montenegro Uninterested in the Balkan League"
+balkan_league.29.d: "Serbia has informed us that Montenegro is not interested in joining the Balkan League."
+balkan_league.29.a: "Too bad, really."
 
- balkan_league.20.t: "Bulgaria Seeks an Armistice"
- balkan_league.20.d: "Bulgaria has underestimated our army and hasn't reached a swifty victory like they thought they would; before things get worse they've reached out to sign an armistace despite their commitments to the Balkan League."
- balkan_league.20.a: "Sign the Armistice"
+balkan_league.3.t: "Macedonian Question: Bulgaria Proposes An Independent Macedonia"
+balkan_league.3.d: "The Bulgarian government has proposed the creation of an independent Macedonia. This is likely their minimum demand for cooperation in the Balkan League. How shall we respond?"
+balkan_league.3.a: "No"
 
- balkan_league.21.t: "Southern Dubroja Oppurtunity"
- balkan_league.21.d: "Admist the chaos in Bulgaria following their lackluster war effort against the Ottomans, we've gained an oppurtunity to swoop in and seize the territory we so desire, and there's nothing Bulgaria can do about it."
- balkan_league.21.a: "No, too risky"
- balkan_league.21.b: "Let's seize the oppurtunity"
+balkan_league.6.t: "Macedonian Question: How To Partition Macedonia?"
+balkan_league.6.d: "With no agreement on an independent Macedonia, the next step is deciding how the region will be partitioned. Bulgaria insists on receiving the largest share."
+balkan_league.6.a: "Erm...How About We Get The Most Benefits?"
 
- balkan_league.22.t: "Romania Seizes Southern Dubroja"
- balkan_league.22.d: "Those Romania bastards have marched into Southern Dubroja uncontested while we deal with the Balkan War turmoil..."
- balkan_league.22.a: "Damn"
+balkan_league.8.t: "Macedonian Question: Bulgaria Demands Ohrid As A Bare Minimum"
+balkan_league.8.d: "The Bulgarian delegation has stated that they will settle for the city of Ohrid as the bare minimum in the partitioning of Macedonia. However, they seek reassurance from Serbia regarding a mutual defense pact against Habsburg aggression."
+balkan_league.8.a: "Ok, I suppose, BUT We Need Reassurance About The Defense Pact Against The Habsburg Aggression"
+balkan_league.8.b: "No! Absolutely NOT"
+
+balkan_league.12.t: "Macedonian Question: Bulgaria Ceases Negotiations!"
+balkan_league.12.d: "The negotiations with Bulgaria regarding Macedonia have collapsed, as they are unwilling to accept any further compromise."
+balkan_league.12.a: "You Will Never Find Someone Else Like Us!"
+
+balkan_league.13.t: "Discussing The Partitioning of Kosova"
+balkan_league.13.d: "The discussion has shifted to the partitioning of Kosovo. Bulgaria demands significant territorial gains, including Novi Pazar and Pristina."
+balkan_league.13.a: "As long As We Get Novi Pazar and Pristina"
+balkan_league.13.b: "Give Us Everything East Of The Cehotina"
+
+balkan_league.26.t: "Montenegro Rejects A Balkan League"
+balkan_league.26.d: "Surprisingly, Montenegro has rejected our proposal to join the Balkan League, casting doubt on the unity of the Balkan states against external threats."
+balkan_league.26.a: "Genuinely Surprising"
+
+balkan_league.27.t: "Montenegro Is Interested In The Balkan League"
+balkan_league.27.d: "Montenegro has expressed interest in joining the Balkan League, further strengthening our position in the region."
+balkan_league.27.a: "Great"
+
+balkan_league.30.t: "Montenegro Agrees To Join The Balkan League"
+balkan_league.30.d: "Montenegro has formally agreed to join the Balkan League, consolidating the alliance against outside aggression."
+balkan_league.30.a: "Great"
+
+balkan_league.15.t: "Serbia Wants To Partition Kosova Along Novi Pazar"
+balkan_league.15.d: "Serbia has proposed that Kosovo be partitioned along the lines of Novi Pazar. This would grant them control over key areas. How do we respond?"
+balkan_league.15.a: "Ok"
+
+balkan_league.17.t: "Serbia Reaches Out To Us About A Balkan League"
+balkan_league.17.d: "Serbia has expressed interest in forming a Balkan League, a potential alliance to counter external threats. Their offer could have serious implications for the region."
+balkan_league.17.a: "Interesting... you have our attention"
+balkan_league.17.b: "No Thanks"
+
+balkan_league.16.t: "Bulgaria Wants To Formalize The Pact"
+balkan_league.16.d: "Bulgaria has approached us, seeking to formalize the pact within the framework of a Balkan League. This could solidify relations between the Balkan states."
+balkan_league.16.a: "Sure"
+
+balkan_league.23.t: "Bulgaria Reaches Out To Us About A Balkan League"
+balkan_league.23.d: "Bulgaria has approached us with a proposal to form a Balkan League. This could be an important step towards regional cooperation and defense."
+balkan_league.23.a: "This sounds fruitful!"
+balkan_league.23.b: "We're good"
 
 #Bulgaria-Ottoman/Turkey Negotiations
 
