--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3586,7 +3586,7 @@
  SER_army_restoration_act_passed:0 "Army Restoration Act Passed"
  SER_pilot_training:0 "Pilot Training"
  SER_buy_airplanes:0 "Buy Airplanes"
- SER_buy_airplanes:0_desc:0 "While relatively new and untested, the Airplane is widely considered to have massive potential. Just like the Great Powers, we too should invest in this new frontier of warfare."
+ SER_buy_airplanes_desc:0 "While relatively new and untested, the Airplane is widely considered to have massive potential. Just like the Great Powers, we too should invest in this new frontier of warfare."
  SER_airport_belgrade:0 "Build Belgrade Airport"
  SER_judicial_improvements:0 "Judicial Improvements"
  SER_press_improvements:0 "Law on Press Freedom"
