Feudal Tree Commit

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -449,13 +449,12 @@
  FEU_strengthen_ruler_position:0 "Strengthen [ROOT.GetLeader]'s Position"
  FEU_enact_minor_reforms:0 "Enact Minor Reforms"
  FEU_the_status_of_the_minorities:0 "The Status of the Minorities"
- FEU_protect_the_rights_of_man:0 "Protect the Rights of Man"
  FEU_pursue_traditionalism:0 "Pursue Traditionalism"
  FEU_pursue_traditionalism_desc:0 "Reforms without the will of the people shall only bring us trouble and revolution, we know that the way forward for our nation is through the pursuit of traditionalism."
  FEU_militarism:0 "Militarism"
  FEU_westernisation:0 "Westernisation"
  FEU_westernisation_desc:0 "Although our people may not agree with our policies, we know that the way forward for our nation is through reforms and social progress."
- FEU_draft_a_constitution:0 "Draft a Constitution"
+
  FEU_our_place_in_the_world:0 "Our Place in the World"
  FEU_our_place_in_the_world_desc:0 "The [ROOT.GetAdjectiveCap] people have a complex history with deep-rooted traditions. It is imperative for a great nation like ours to assert its position in the world."
  FEU_secure_our_independence:0 "Secure our Independence"
@@ -473,6 +472,19 @@
  FEU_purchase_foreign_equipment:0 "Purchase Foreign Equipment"
  FEU_purchase_foreign_artillery:0 "Purchase Foreign Artillery"
 
+ FEU_strengthen_ties_with_def_overlord:0 "Strengthen Ties with our Overlord"
+ FEU_overlord_military_mission:0 "Overlord Military Mission"
+ FEU_fortress_capital:0 "Fortress Capital"
+ FEU_the_adjective_volunteer_force:0 "The [ROOT.GetAdjective] Volunteer Force"
+ FEU_secure_overlord_technologies:0 "Secure Overlord Technologies"
+ FEU_total_submition:0 "Total Submition"
+ FEU_demand_greater_autonomy:0 "Demand Greater Autonomy"
+ FEU_accept_foreign_influence:0 "Accept Foreign Influence"
+ FEU_invite_overlord_settlers:0 "Invite Foreign Settlers"
+ FEU_grant_overlord_citizen_special_rights:0 "Grant Special Rights to Foreign Citizen"
+ FEU_overlord_investments:0 "Foreign Investments"
+ FEU_the_adjective_railroad:0 "The [ROOT.GetAdjective] Railroad"
+
 FEU_the_adjective_armed_forces:0 "The [ROOT.GetAdjective] Armed Forces"
 FEU_warrior_tradition:0 "Warrior Tradition"
 FEU_strengthen_the_irregulars:0 "Strengthen the Irregulars"
@@ -485,16 +497,16 @@ FEU_establish_military_academy:0 "Establish the [ROOT.GetAdjective] Military Ace
 FEU_smuggle_arms:0 "Smuggle Arms"
 
 FEU_develop_capitalstate:0 "Develop [ROOT.capital.GetName]"
-FEU_pave_the_roads:0 "Pave the Roads"
-FEU_the_adjective_regional_development_fund:0 "The [ROOT.GetAdjective] Development Fund"
-FEU_efficent_farming:0 "Efficent Farming Techniques"
-FEU_state-funded_projects:0 "Urbanisation of [ROOT.Capital.GetCapitalVictoryPointName]"
-FEU_improved_irrigation_systems:0 "Improved Irrigation Systems"
+FEU_use_the_wealth_of_the_nobility:0 "Use the Wealth of the Nobility"
 FEU_promote_local_crafts:0 "Promote Local Crafts"
+FEU_exploit_national_resources:0 "Exploit National Resources"
+FEU_modern_farming_methods:0 "Modern Farming Methods"
+FEU_modern_roads:0 "Modern Roads"
+FEU_improve_our_irrigation_systems:0 "Improve our Irrigation Systems"
+FEU_gatekeep_education:0 "Gatekeep Education"
 FEU_literacy_programs:0 "Literacy Programs"
-FEU_basic_schools:0 "Basic Education"
-FEU_the_grand_university_of_capital:0 "The University of [ROOT.Capital.GetCapitalVictoryPointName]"
-FEU_expand_our_agriculture:0 "Expand Our Agriculture"
+FEU_urbanisation_of_capitalstate:0 "Urbanisation of [ROOT.Capital.GetCapitalVictoryPointName]"
+FEU_grand_university_of_capital:0 "Grand University of [ROOT.Capital.GetCapitalVictoryPointName]"
 
  ##########
 
