--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1905,7 +1905,7 @@
  VICTORY_POINTS_1834: "Murun"
  VICTORY_POINTS_3161: "Kotka"
  VICTORY_POINTS_11121: "Brahestad"
- VICTORY_POINTS_11519: "Liège"
+ VICTORY_POINTS_11519: "Liége"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
