--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -13176,17 +13176,17 @@ FRA_leave_MOR: "Leave Morocco"
  ww1_somalia.4.b: "They can come and take it!"
 
  # BALKAN LEAUGE
-#  ww1_balkan.1.t: "Treaty of Friendship"
-#  ww1_balkan.1.d: "Bulgaria has approached our embassy in order to strengthen our relations. Although we are opposed on the fate of the Macedonian populations, the idea of liberating the Balkans together from the yoke of the Ottomans remains omnipresent. Can we trust the Bulgarians?"
-#  ww1_balkan.1.a: "Accept"
-#  ww1_balkan.1.b: "Refuse"
-#  balkan_league_fail_tt: "§RBalkan League won't be possible to get formed without this!§!"
-#  ww1_balkan.2.t: "Treaty of Friendship signed"
-#  ww1_balkan.2.d: "The feedback from our [FROM.GetAdjective] partners has been positive. But although an alliance between our two nations is now recorded, the question of Macedonia remains unresolved. We must mobilize politically through the VRMO in order to take advantage in these contested regions."
-#  ww1_balkan.2.a: "Good"
-#  ww1_balkan.3.t: "Treaty of Friendship rejected"
-#  ww1_balkan.3.d: "Despite our diplomatic efforts, [SER.getLeader] rejected our goodwill treaty, claiming we weren't reliable partners."
-#  ww1_balkan.3.a: "Fools..."
+ ww1_balkan.1.t: "Treaty of Friendship"
+ ww1_balkan.1.d: "Bulgaria has approached our embassy in order to strengthen our relations with them and discuss the geopolitical situation with the Ottomans. Although we are opposed to the fate of the Macedonian populations, we respect the idea of liberating the Balkans together from the Ottomans who have oppressed us for so long. Can we trust the Bulgarians?"
+ ww1_balkan.1.a: "Accept"
+ ww1_balkan.1.b: "Refuse"
+ balkan_league_fail_tt: "Balkan League won't be possible to get formed without this!"
+ ww1_balkan.2.t: "Treaty of Friendship Signed"
+ ww1_balkan.2.d: "The feedback from Serbia has been positive, but although an alliance between our two nations has been recorded, the question of Macedonia remains unresolved. We must mobilize politically through the VROMO to exploit these contested regions."
+ ww1_balkan.2.a: "Good"
+ ww1_balkan.3.t: "Treaty of Friendship Rejected"
+ ww1_balkan.3.d: "Despite our diplomatic efforts, Serbian leadership has rejected our goodwill treaty, claiming we weren't reliable partners."
+ ww1_balkan.3.a: "Fools..."
  ww1_balkan.4.t: "Bulgarian offer"
  ww1_balkan.4.d: "Bulgaria presented itself to us in the framework of the discussions on Macedonia. This contested region between our two nations is the main point of disintegration of the alliance. [BUL.getLeader] proposed the creation of a totally independent aunomous and neutral state. This balanced solution would avoid military claims on both sides."
  ww1_balkan.4.a: "This is the best compromise solution"
