--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -624,10 +624,6 @@
 
  RAJ_seize_assets_of_seditious_individuals:0 "Seize Assets of Seditious Individuals"
 
- fight_against_the_caste_system:0 "Fight Against the Caste System"
-
- reinforce_the_caste_system:0 "Reinforce the Caste System"
-
  # Social Reforms
  RAJ_social_reforms_category:0 "Social Reforms"
 
@@ -890,15 +886,15 @@ RAJ_support_local_farmers_reward:0 "Modify '§YDe-Industrialisation§!' by:\n£G
 # Army Tree
 RAJ_indian_army_act:0 "Indian Army Act"
 RAJ_indian_army_act_desc:0 ""
-RAJ_indian_army_act_reward:0 ""
+RAJ_indian_army_act_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_organization_texticon Division Organization:§G +10.0%§!\n£GFX_defence_texticon Division Defense:§G +10.0%§!\n\n"
 
 RAJ_defence_of_the_northwest_frontier:0 "Defence of the Northwest Frontier"
 RAJ_defence_of_the_northwest_frontier_desc:0 ""
-RAJ_defence_of_the_northwest_frontier_reward:0 "Modify '§YIndian Army§!' by:\nDivision Defense:§G +5.00%§!"
+RAJ_defence_of_the_northwest_frontier_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_defence_texticon Division Defense:§G +5.0%§!"
 
 RAJ_enlist_gurkhas:0 "Enlist Gurkhas"
 RAJ_enlist_gurkhas_desc:0 ""
-RAJ_enlist_gurkhas_reward:0 "Modify '§YIndian Army§!' by:\nSpecial Forces Capacity Multiplier:§G +10.00%§!"
+RAJ_enlist_gurkhas_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_unit_category_special_forces_icon_small Special Forces Capacity Multiplier:§G +10.00%§!"
 
 RAJ_ramp_up_military_budget:0 "Ramp-up Military Budget"
 RAJ_ramp_up_military_budget_desc:0 "The Indian Army is currently the costliest army in the world. It costs India 52 Pound per head, which is astonishingly high compared to the second costliest army in the world, the British Army at 21 Pound per head. In an effort to reduce our military expenditure in the long term, we will double it over the course of a year."
@@ -906,14 +902,15 @@ RAJ_ramp_up_military_budget_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_cons
 
 RAJ_indianisation_of_the_officer_corps:0 "Indianisation of the Officer Corps"
 RAJ_indianisation_of_the_officer_corps_desc:0 ""
-RAJ_indianisation_of_the_officer_corps_reward:0 "Modify '§YIndian Army§!' by:\nDivision Attrition:§G -10.00%§!\nPlanning Speed:§G +10.00%§!\nMax planning factor:§R -10.00%§!\nArmy Experience Gain:§R -0.02§! daily"
+RAJ_indianisation_of_the_officer_corps_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_attrition_texticon Division Attrition:§G -10.0%§!\n£GFX_planning_speed_texticon Planning Speed:§G +10.0%§!\n£GFX_planning_max_texticon Max planning factor:§R -10.0%§!\n£GFX_army_experience Army Experience Gain:§R -0.02§! daily\n\n"
 
 RAJ_pursue_kitchener_reforms:0 "Pursue Kitchener Reforms"
 RAJ_pursue_kitchener_reforms_desc:0 ""
-RAJ_pursue_kitchener_reforms_reward:0 "Modify '§YIndian Army§!' by:\nDivision Organization:§G +10.00%§!\nArmy Experience Gain:§G +0.03§! daily"
+RAJ_pursue_kitchener_reforms_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_organization_texticon Division Organization:§G +10.0%§!\n£GFX_army_experience Army Experience Gain:§G +0.03§! daily"
 
 RAJ_the_grand_war:0 "The Grand War"
 RAJ_the_grand_war_desc:0 ""
+RAJ_the_grand_war_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_organization_texticon Division Organization:§G +10.0%§!\n£GFX_attrition_texticon Division Attrition:§G -10.0%§!"
 
 # External Security
 RAJ_external_security:0 "External Security"
@@ -955,7 +952,7 @@ RAJ_calcutta_dockyards_desc:0 ""
 
 RAJ_the_path_to_mesopotamia:0 "The Path to Mesopotamia"
 RAJ_the_path_to_mesopotamia_desc:0 ""
-RAJ_the_path_to_mesopotamia_reward:0 "Modify '§YIndian Army§!' by:\nInvasion Preparation Speed:§G +25.00%§!"
+RAJ_the_path_to_mesopotamia_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_naval_invasion_speed_texticon Invasion Preparation Speed:§G +25.00%§!"
 
 # Internal Security
 RAJ_internal_security:0 "Internal Security"
@@ -966,39 +963,39 @@ RAJ_integrate_burma_desc:0 ""
 
 RAJ_empower_the_ghq:0 "Empower the GHQ"
 RAJ_empower_the_ghq_desc:0 ""
-RAJ_empower_the_ghq_reward:0 ""
+RAJ_empower_the_ghq_reward:0 "\nModify '§YIndian Army§!' by:\n£GFX_organization_texticon Division Organization:§G +10.0%§!\n£GFX_command_power_texticon Daily Command Power Gain Multiplier:§G +10%§!"
 
 RAJ_diversified_equipments:0 "Diversified Equipments"
 RAJ_diversified_equipments_desc:0 ""
-RAJ_diversified_equipments_reward:0 "Modify '§YIndian Army§!' by:\nEquipment Capture Ratio Modifier:§G +20.00%§!\nLicense purchase cost:§R -50.00%§!"
+RAJ_diversified_equipments_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_infantry_equipment_texticon Equipment Capture Ratio Modifier:§G +20.0%§!\n£GFX_production_licence_cost_texticon License purchase cost:§R -50%§!"
 
 RAJ_adopt_british_models:0 "Adopt British Models"
 RAJ_adopt_british_models_desc:0 ""
-RAJ_adopt_british_models_reward:0 "Modify '§YIndian Army§!' by:\nLicense purchase cost:§G +50.00%§!\nEquipment Capture Ratio Modifier:§R -15.00%§!"
+RAJ_adopt_british_models_reward:0 "\nModify '§YIndian Army§!' by:\n£GFX_production_licence_cost_texticon License purchase cost:§G +50.0%§!\n£GFX_infantry_equipment_texticon Equipment Capture Ratio Modifier:§R -15.0%§!"
 
 RAJ_indian_staff_college:0 "Indian Staff College"
 RAJ_indian_staff_college_desc:0 ""
-RAJ_indian_staff_college_reward:0 ""
+RAJ_indian_staff_college_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_training_speed_texticon Training Time:§G -10.00%§!\n£GFX_command_power_texticon Daily Command Power Gain Multiplier:§G +10%§!"
 
 RAJ_deal_with_the_officers_shortage:0 "Deal with the Officer Shortage"
 RAJ_deal_with_the_officers_shortage_desc:0 ""
-RAJ_deal_with_the_officers_shortage_reward:0 ""
+RAJ_deal_with_the_officers_shortage_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_training_speed_texticon Training Time:§G -10.00%§!\n£GFX_army_advisor_cost_texticon Commander as Advisor Cost:§G +25.0%§!"
 
 RAJ_reorganise_the_chain_of_command:0 "Reorganise the Chain of Command"
 RAJ_reorganise_the_chain_of_command_desc:0 ""
-RAJ_reorganise_the_chain_of_command_reward:0 ""
+RAJ_reorganise_the_chain_of_command_reward:0 "\nModify '§YIndian Army§!' by:\n£GFX_defence_texticon Division Defense:§G +5.0%§!\n£GFX_reinforce_texticon Reinforce Rate:§G +5.0%§!"
 
 RAJ_indian_medical_degrees_act:0 "Indian Medical Degrees Act"
 RAJ_indian_medical_degrees_act_desc:0 ""
-RAJ_indian_medical_degrees_act_reward:0 ""
+RAJ_indian_medical_degrees_act_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_attrition_texticon Division Attrition:§G +10.0%§!\n£GFX_reinforce_texticon Reinforce Rate:§G +10.0%§!"
 
 RAJ_adapt_our_supportives_services:0 "Adapt our Supportives Services"
 RAJ_adapt_our_supportives_services_desc:0 ""
-RAJ_adapt_our_supportives_services_reward:0 ""
+RAJ_adapt_our_supportives_services_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_attacker_speed_texticon Divisions speed:§G +10.00%§!\n£GFX_attrition_texticon Division Attrition:§G +10.0%§!"
 
 RAJ_war_of_opportunity:0 "War of Opportunity"
 RAJ_war_of_opportunity_desc:0 ""
-RAJ_war_of_opportunity_reward:0 ""
+RAJ_war_of_opportunity_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_army_advisor_cost_texticon Commander as Advisor Cost:§G +25.0%§!\n\n"
 
 # Third Anglo-Afghan War
 RAJ_third_anglo_afghan_war:0 "Third Anglo-Afghan War"
