--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1169,6 +1169,10 @@
  SOV_idea_red_guard:0 "Red Guard"
  SOV_idea_red_guard_desc:0 "The Soviet government has not yet formed an army, and it relies on the rebel brigades of the Red Guards."
  SOV_idea_war_communism:0 "War Communism"
+ SOV_idea_focus_infantry_equipment:0 "Enhanced Infantry Equipment Production"
+ SOV_idea_focus_support_equipment:0 "Enhanced Support Equipment Production"
+ SOV_idea_focus_artillery_equipment:0 "Enhanced Artillery Equipment Production"
+ SOV_idea_focus_plane_equipment:0 "Enhanced Fighter Equipment Production"
  SOV_idea_famine:0 "Great Famine"
  SOV_idea_NEP:0 "New Economic Politics"
  SOV_idea_first_five_year_plan:0 "First Five-Year Plan"
@@ -2905,6 +2909,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  SRA_british_training_idea:0 "British Training"
  SRA_counter_intelligence:0 "Counter Intelligence"
  SRA_special_council_idea:0 "Special Council"
+ SRA_british_advisors:0 "British Advisors"
  #DON
  DON_alekseev_organization_1:0 "Alekseev Organization"
  DON_alekseev_organization_2:0 "Alekseev Organization"
