--- a/localisation/english/replace/replace_focus_l_english.yml
+++ b/localisation/english/replace/replace_focus_l_english.yml
@@ -26,3 +26,4 @@
  CHI_mission_to_the_soviet_union:0 "Mission To the Soviet Russia"
  CHI_mission_to_the_soviet_union_desc:0 "[SOV.GetNameDefCap] has expressed an interest in China, mainly to create a counter-weight to colonial expansionism. We should send a mission to Moscow to see if our goals align."
  FIN_social_democracy: "Republic of Finland"
+ PRC_social_democracy:0 "Liberated Zone"
