--- a/localisation/english/replace/replace_focus_l_english.yml
+++ b/localisation/english/replace/replace_focus_l_english.yml
@@ -25,5 +25,5 @@
  CHI_purchase_tanks_tt:0 "We will receive 30 old light tanks from our supporter."
  CHI_mission_to_the_soviet_union:0 "Mission To the Soviet Russia"
  CHI_mission_to_the_soviet_union_desc:0 "[SOV.GetNameDefCap] has expressed an interest in China, mainly to create a counter-weight to colonial expansionism. We should send a mission to Moscow to see if our goals align."
- FIN_social_democracy: "Republic of Finland"
- PRC_social_democracy:0 "Liberated Zone"
+ FIN_social_democracy: "$FIN_democratic$"
+ PRC_social_democracy:0 "$Liberated Zone$"
