--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9340,10 +9340,10 @@ ROM_tudor_arghezi:0 "Tudor Arghezi"
 ROM_exile_carp_from_politics:0 "Exile Carp from Politics"
 ROM_isolate_stere:0 "Isolate Stere's PNL Faction"
 ROM_bipartisan_rhetoric:0 "Bipartisan Rhetoric"
-
+ROM_streamlined_appointment_system:0 "Meritocracy"
 ROM_shrink_the_size_of_government:0 "Rape Sussy"
 ROM_investigate_missing_government_funds:0 "Investigate Missing Government Funds"
-ROM_fight_pnl_corruption_networks:0 "Dismantle PNL Corruption Networks"
+ROM_fight_pnl_corruption_networks:0 "Dismantle PNL Corruption Networks "
  ROM_kings_country_category_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romanias king can outright dismiss governments as well as dissolve parliament in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romanias public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to §Rextreme measures§!. In addition, if the king approves of our government, they may use their political clout to help push our agenda.\n\nThe king's opinion can very from the following:\n§RVery negative§!, which gives us:\nPolitical Power Gain: §R-20%§!\nStability: §R-12.00%§!\n§ONegative§!, which gives us:\nPolitical Power Gain: §R-10%§!\nStability: §R-6.00%§!\n§YNeutral§!, which gives us:\nPolitical Power Gain: §Y+0%§!\nStability: §Y+0.00%§!\n§7Positive§!, which gives us:\nPolitical Power Gain: §G+10%§!\nStability: §G+6.00%§!\n§GVery positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!\n\nThe king's current opinion of the government is [KingsOpinionRomania]"
 ROM_dncdna:0 "§CIrrelevent§! to the Politics of Romania, meaning we will recieve:\nPolitical Power Gain: §Y+00%§!\nStability: §Y+0.00%§!"
 ROM_king_view_complete_disapprove:0 "§RVery negative§!, which gives us:\nPower Gain: §R-20%§!\nStability: §R-12.00%§!"
