--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -24,10 +24,13 @@
  national_militarism:0 "[ROOT.getAdjective] Militarism"
  national_militarism_desc:0 "Bolstering our military prowess is vital in asserting our position on the world stage. A strong and formidable army will safeguard our interests and deter potential aggressors."
  army_politization:0 "Army Politization"
+
+
  army_politization_desc:0 "The integration of political education within our military ranks is essential. This will ensure that our soldiers are not only skilled in warfare but also loyal to our national ideals."
  ressort_old_claims:0 "Revive Old Claims"
  ressort_old_claims_desc:0 "It is time to revisit and assert our historical claims. This act of reclamation will restore our national pride and strengthen our territorial integrity."
  reclaim_lands:0 "Reclaim Lands"
+
  reclaim_lands_desc:0 "Our historical lands await liberation. Mobilizing our forces to reclaim what is rightfully ours will bring glory to [ROOT.GetNameDef] and solidify our national unity."
  give_seats_to_socialists:0 "Give Seats to Socialists"
  give_seats_to_socialists_desc:0 "In the spirit of political plurality, we must extend parliamentary representation to the socialists. This inclusive approach will ensure a more balanced and representative governance."
@@ -5547,7 +5550,7 @@ ROM_peasants_democracy:0 "Peasants' Democracy"
 ROM_encourage_jobs_in_the_war_industry:0 "Hire in the War Industry"
 ROM_de_polarization:0 "Depolarization"
 ROM_transition_towards_a_socialist_economy:0 "Transition to a Socialist Economy"
-ROM_alliance_with_the_pdsr:0 "Ally with the PDSR"
+ROM_alliance_with_the_pdsr:0 "Alliance with the PDSR"
 ROM_invite_french_socialists:0 "Invite French Socialists"
 ROM_restructure_our_logistics:0 "Improve Supply Logistics"
 ROM_restructure_our_logistics_desc:0 "With Romania's needs of armed forces expanding, it has become evident that our current logistics network is insufficient. By modernizing our supply routes and infrastructure, we can ensure that vital resources reach the front lines more efficiently, strengthening our strategic capabilities and preparing our nation for future challenges."
