--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -8515,7 +8515,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  BRA_campanha_civilista:0 "Campanha Civilista"
  BRA_campanha_civilista_desc:0 "Rui Barbosa's campaign was characterized by the close relationship with the population and the holding of intense rallies, which were held on improvised stands of crates. Rui travelled by ship, horse carriage and train through Bahia, São Paulo, Minas Gerais and Rio de Janeiro."
  BRA_reform_the_republic:0 "Reform the Republic"
- BRA_reform_the_republic_desc:0 "The republic has become an absurd "
+ BRA_reform_the_republic_desc:0 "The republic has become an absurd corrupt parody of itself."
  BRA_pact_of_ouro_fino:0 "Pact of Ouro Fino"
  BRA_pact_of_ouro_fino_desc:0 "The Governors of São Paulo and Minas decided to make an alliance the main objective of which is to maintain a president who would guarantee the interest of the oligarchs of these two states."
  BRA_public_education_program:0 "Public Education Program"
