Kingdom of Poland content

--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -114,7 +114,7 @@
  ww1_poland.51.f:0 "Reactionary Poland?"
 
  ww1_poland.24.title:0 "Liberation of Lwów"
- ww1_poland.24.desc:0 "Tonight, after long and extremely bloody fights, the Polish forces pushed the Ukrainians out of Lwów. The fights started with the capture of most public buildings in Lwów by former Austro-Hungarian Ukrainian soldiers on November 1 and the proclamation of the creation of the West Ukrainian People's Republic. Polish underground organizations, Polish citizens of Lwów, including the youth, especially students opposed this. It is true that the Ukrainians left the city, but they began the siege as Ukrainian troops surround the area around Lwów. The Polish troops in city are poorly equipped and are threatened by the prospect of famine and breakdown. The city is waiting for relief!"
+ ww1_poland.24.desc:0 "Tonight, after long and extremely bloody fights, the Polish forces pushed the Ukrainians out of Lwów. The fights started with the capture of most public buildings in Lwów by former Austro-Hungarian Ukrainian soldiers and the proclamation of the creation of the West Ukrainian People's Republic. Polish underground organizations, Polish citizens of Lwów, including the youth, especially students opposed this. It is true that the Ukrainians left the city, but they began the siege as Ukrainian troops surround the area around Lwów. The Polish troops in city are poorly equipped and are threatened by the prospect of famine and breakdown. The city is waiting for relief!"
  ww1_poland.24.a:0 "For relief!"
 
  ww1_poland.25.title:0 "Januszajtis Coup Attempt"
@@ -225,6 +225,18 @@
  ww1_poland.50.desc:0 "Faced with growing public discontent and the weakened position of the government, Prime Minister Józef Świezyński, in an attempt to regain public support for his government, announced a manifesto dethroning the Regency Council and called for the formation of a national government based on cooperation with the left and supporters of Józef Piłsudski. Despite attempts to present the manifesto in the spirit of national unification, its leftist tone did not convince either the left or the Piłsudskiites, which rejected the offer of cooperation. The coup attempt failed, and the Regency Council immediately dismissed Świezyński, which the prime minister accepted without resistance. The country found itself in crisis, without a functioning Council of Ministers, and power passed to the provisional government of Władysław Wróblewski. The failed coup attempt highlights the power crisis facing the Regency Council."
  ww1_poland.50.a:0 "The situation is complicated..."
 
+ ww1_poland.52.title:0 "Kucharzewski's Cabinet Resignation"
+ ww1_poland.52.desc:0 "Faced with the unfavorable results of the peace negotiations in Brest-Litovsk and the exclusion of the Kingdom of Poland from the possibility of taking part in the negotiations, Prime Minister Jan Kucharzewski resigns. Kucharzewski's government repeatedly sought the opportunity to participate in the negotiations, but all attempts to influence the decisions of Berlin and Vienna proved unsuccessful. The Germans, determined to make peace with Russia at any cost, signed a treaty to cede Chelm region to Ukrainian administration. The treaty's provisions provoked widespread outrage in the Kingdom and further weakened the authority of both the government and the Regency Council. Faced with this situation, on [GetDate], Jan Kucharzewski's government submits its resignation, which was accepted. Despite this, the Regency Council decides not to immediately appoint a new government, and entrusted current affairs to the Council of Ministry Heads headed by Antoni Ponikowski. This is a clear endorsement of the outgoing government and an expression of opposition to the occupation authorities, with whom the Regency Council demonstratively suspends contacts."
+ ww1_poland.52.a:0 "That's the fourth partition of Poland!"
+
+ ww1_poland.53.title:0 "Jan Kanty Steczkowski's Cabinet"
+ ww1_poland.53.desc:0 "After a period of suspended contacts with German and Austrian authorities, the situation forced the Central Powers to slightly change their approach towards the Kingdom of Poland. General Hans Hartwig von Beseler, struggling with the shortage of Polish recruits, came up with proposals for a settlement that would open up new opportunities for negotiation. Jan Kanty Steczkowski, responding to these initiatives, put forward demands in his memorial to secure Poland's position in the future Mitteleuropa arrangement. Steczkowski demanded, among other things, a plebiscite in Chełm region and Podlasie, negotiations on the future of Vilnius, Belarus and Galicia, as well as gaining Polish access to the sea, through Vistula, which was to be guaranteed in the Polish-German trade treaty. These demands, although somewhat at odds with Berlin's interests, met with the general acceptance of Governor General von Beseler. As a result, on [GetDate]. Regency Council decides to appoint a new government headed by Jan Steczkowski, hoping to gain further prerogatives for the resurgent Polish state."
+ ww1_poland.53.a:0 "Good luck to the new government"
+
+ ww1_poland.54.title:0 "Council of State Election Results"
+ ww1_poland.54.desc:0 ""
+ ww1_poland.54.a:0 ""
+
  ww1_poland.60.title:0 "Józef Piłsudski's Resignation"
  ww1_poland.60.desc:0 "Józef Piłsudski, the Chief of State and Commander-in-Chief, submitted a letter of resignation to Prime Minister Wincenty Witos. After submitting his resignation, he held several key meetings with General Tadeusz Rozwadowski, French military advisor General Maxime Weygand, and Cardinal Aleksander Kakowski. After these meetings, Piłsudski left Warsaw. The question is what to do in this situation? Shouldn't the Prime Minister announce the resignation of the Chief, which will hit the morale of the army and society, or should he announce his resignation, opening the way to changes at the highest levels of power?"
  ww1_poland.60.a:0 "This can't be announced now!"
@@ -254,17 +266,21 @@
  POL_regency_council_of_the_kingdom_of_poland:0 "Regency Council of the Kingdom of Poland"
  POL_regency_council_of_the_kingdom_of_poland_desc:0 "In place of the dissolved Temporary Council of State, the Regency Council of the Kingdom of Poland will be enthroned as the supreme authority of the Kingdom of Poland, replacing the king or regent. The council will be composed of Warsaw Mayor Prince Zdzisław Lubomirski, landowner Józef Ostrowski and Warsaw Bishop Aleksander Kakowski."
  POL_the_royal_polish_government:0 "The Royal-Polish Government"
- POL_the_royal_polish_government_desc:0 ""
+ POL_the_royal_polish_government_desc:0 "After extensive negotiations with Governor General Hans Hartwig von Beseler, the Regency Council will finally appoint the first Royal-Polish government. It will be headed by - a prominent lawyer - Jan Kucharzewski. Despite difficult circumstances, this government aims to build the foundations of the state."
+ POL_the_crown_council:0 "The Crown Council"
+ POL_the_crown_council_desc:0 "After the formation of the foundations of the Polish administration, the Regency Council decided to establish the Crown Council - a body acting as a liaison between the Regency Council and the Council of Ministers. The Crown Council would serve as the supreme coordinating body for the Polish government in matters most important to the country."
  POL_council_of_state_elections:0 "Council of State Elections"
- POL_council_of_state_elections_desc:0 ""
+ POL_council_of_state_elections_desc:0 "By decree of the Regency Council, elections will be held for the Council of State, a temporary parliament to help manage the affairs of the state. The Council, consisting of 110 members, will have a say in the process of rebuilding the state. Half of them will be elected by city councils and county assemblies, while the rest of the Council of State will be formed by 43 members appointed by the Regency Council, representatives of the clergy of various religions, the rectors of the University and Polytechnic, and the first president of the Supreme Court."
  POL_commissions_of_district_lands:0 "Commissions of District Lands"
  POL_commissions_of_district_lands_desc:0 ""
  POL_declaration_of_independence:0 "Declaration of Independence"
- POL_declaration_of_independence_desc:0 ""
+ POL_declaration_of_independence_desc:0 "Faced with the approaching end of the Great War, the Regency Council will proclaim Poland's independence in its historic proclamation “To the Polish Nation.” The declaration is intended to mobilize the nation to continue the struggle for full independence and to base the future state on strong national foundations. Poland is beginning to emerge from the shadow of foreign powers, embarking on the road to independence."
  POL_swiezynskis_cabinet:0 "Świeżyński's Cabinet"
  POL_swiezynskis_cabinet_desc:0 ""
- POL_return_of_brigadier_piLsudski:0 "Return of Brigadier Piłsudski"
+ POL_return_of_brigadier_pilsudski:0 "Return of Brigadier Piłsudski"
+ POL_return_of_brigadier_pilsudski_desc:0 ""
  POL_wojsko_polskie:0 "Wojsko Polskie"
+ POL_wojsko_polskie_desc:0 ""
 
  POL_polnische_wehrmacht:0 "Polnische Wehrmacht"
  POL_polnische_wehrmacht_desc:0 ""
@@ -491,6 +507,12 @@
  ### SiC
 
  ### Political Advisors
+ POL_jan_kucharzewski:0 "Jan Kucharzewski"
+ POL_antoni_ponikowski:0 "Antoni Ponikowski"
+ POL_jan_katy_steczkowski:0 "Jan Katy Steczkowski"
+ POL_jozef_swiezynski:0 "Józef Świeżyński"
+ POL_wladyslaw_wroblewski:0 "Władysław Wróblewski"
+
  POL_prime_minister_red_pilsudskite:0 "Red Pilsudskite" #Prime Minister: Red Pilsudskite
  POL_prime_minister_ambassador_of_polish_affairs:0 "Ambassador of Polish Affairs" #Prime Minister: Ambassador of Polish Affairs
  POL_prime_minister_nationalist_realist:0 "Nationalist Political Realist" #Prime Minister: Nationalist Realist
