Polish Autonomy decision

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -125,6 +125,9 @@
  RUS_law_on_polish_zemstvo_sd: "Law on Polish Zemstvo"
  RUS_law_on_polish_zemstvo_sc: "Law on Polish Zemstvo"
  RUS_law_on_polish_zemstvo_passed_in_sc: "Law on Polish Zemstvo was passed in the State Council"
+ RUS_law_personal_union_with_poland_sd: "Law of Personal Union with Poland"
+ RUS_law_personal_union_with_poland_sc: "Law of Personal Union with Poland"
+ RUS_poland_released_tooltip: "§YPoland§! will be §Greleased§! as a §YPersonal Union§! of §YRussia§!"
  RUS_law_on_reformation_of_police_sd: "Law on Reformation of Police in the Empire"
  RUS_law_on_reformation_of_police_sc: "Law on Reformation of Police in the Empire"
  RUS_law_on_introduction_of_the_income_tax_sd: "Law on Introduction of the Income Tax"
@@ -284,8 +287,8 @@
  not_has_authoritarian_zemstvo_scripted_trigger_tt: "Does not have national spirit §YAuthoritarian Zemstvo§!"
  duma_is_active_scripted_trigger_tt: "Not: The parliament has been dismissed"
  duma_is_not_active_scripted_trigger_tt: "The parliament has been dismissed"
- has_tsardom_of_poland_scripted_trigger_tt: "Has Modifier: §YTsardom of Poland§!"
  controls_poland_scripted_trigger_tt: "Controls territories of Tsardom of Poland"
+ not_controls_poland_scripted_trigger_tt: "Not: Controls territories of Tsardom of Poland"
 
  # National Focuses
  RUS_stolypins_reforms: "Stolypin's Reforms"
