--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -843,12 +843,12 @@
  CRO_SSCS_communism:0 "Union of Yugoslav Nations"
  CRO_SSCS_communism_DEF:0 "the Union of the Yugoslav Nations"
  CRO_SSCS_communism_ADJ:0 "Yugoslavian"
- POL_RUS_democratic:0 "Congress Poland"
- POL_RUS_democratic_DEF:0 "Congress Poland"
+ POL_RUS_democratic:0 "Tsardom of Poland"
+ POL_RUS_democratic_DEF:0 "the Tsardom of Poland"
  POL_RUS_neutrality:0 "Tsardom of Poland"
  POL_RUS_neutrality_DEF:0 "the Tsardom of Poland"
- POL_RUS_fascism:0 "Warsaw Governorate"
- POL_RUS_fascism_DEF:0 "the Warsaw Governorate"
+ POL_RUS_fascism:0 "Tsardom of Poland"
+ POL_RUS_fascism_DEF:0 "the Tsardom of Poland"
  FIN_kingdom_democratic:0 "Finland"
  FIN_kingdom_democratic_DEF:0 "Finland"
  FIN_kingdom_neutrality:0 "Kingdom of Finland"
