Pacific islands cores

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -4032,3 +4032,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  SEN_lamine_senghor:0 "Lamine Senghor"
 
  MLW_john_chilembwe:0 "John Chilembwe"
+ 
+ FIJ_penaia_kadavulevu:0 "Penaia Kadavulevu"
+
+ SAM_malietoa_tanumafili_i:0 "Malietoa Tanumafili I"
