--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2096,13 +2096,12 @@
  FIJ_fascism_DEF:1 "the Empire of the Seas"
  FIJ_democratic:1 "Melanesian Federation"
  FIJ_democratic_DEF:1 "the Melanesian Federation"
- FIJ_neutrality:0 "Fiji"
- FIJ_neutrality_DEF:0 "Fiji"
+ FIJ_neutrality:0 "Kingdom of Fiji"
+ FIJ_neutrality_DEF:0 "the Kingdom of Fiji"
  FIJ_communism:1 "Pacific Worker State"
  FIJ_communism_DEF:1 "the Pacific Worker State"
  FIJ_fascism_ADJ:1 "Pacific"
  FIJ_democratic_ADJ:1 "Melanesian"
- FIJ_neutrality_ADJ:0 "Fijian"
  FIJ_communism_ADJ:1 "Pacific"
  FIJ:0 "Fiji"
  FIJ_DEF:0 "Fiji"
@@ -2125,6 +2124,8 @@
  FSM_communism_DEF:0 "the Greater Pohnpei Union State"
  FSM_fascism:0 "Second Saudeleur Dynastic Empire"
  FSM_fascism_DEF:0 "the Saudeleur Dynastic Empire"
+ FSM_neutrality:0 "Micronesian Tribes"
+ FSM_neutrality_DEF:0 "the Micronesian Tribes"
  FSM:0 "Micronesia"
  FSM_DEF:0 "Micronesia"
  FSM_ADJ:0 "Micronesian"
@@ -2168,13 +2169,12 @@
  SOL_ADJ:0 "Solomon"
  SAM_democratic:0 "Independent State of Samoa"
  SAM_democratic_DEF:0 "the Independent State of Samoa"
- SAM_democratic_ADJ:0 "Samoan"
  SAM_communism:0 "Samoan People's Republic"
  SAM_communism_DEF:0 "the Samoan People's Republic"
- SAM_communism_ADJ:0 "Samoan"
+ SAM_neutrality:0 "Kingdom of Samoa"
+ SAM_neutrality_DEF:0 "the Kingdom of Samoa"
  SAM_fascism:0 "Manaist State of Samoa"
  SAM_fascism_DEF:0 "the Manaist State of Samoa"
- SAM_fascism_ADJ:0 "Samoan"
  SAM:0 "Samoa"
  SAM_DEF:0 "Samoa"
  SAM_ADJ:0 "Samoan"
